# malloc

./: CMakeLists.txt  Intra Projects Malloc Edit.htm  Makefile  Makefile_original  a.out  main.c  run.sh  test1  test2  test3  test3_2  test4  test5
ft_printf/: Makefile  author
ft_printf/libft/: Makefile  ft_atoi.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstiter.c  ft_memcpy.c  ft_memdel.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putstr.c  ft_strcat.c  ft_strchr.c  ft_strdel.c  ft_striter.c  ft_strmap.c  ft_strncat.c  ft_strncmp.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  get_next_line.c  get_next_line.h  libft.h  libft.h.gch
ft_printf/src/: colors.c  ft_al.c  ft_atoi_n.c  ft_char_type.c  ft_clear.c  ft_itoa_base.c  ft_itoa_base_sign.c  ft_len.c  ft_newlist.c  ft_pointer.c  ft_printf.c  ft_puttext.c  ft_realloc.c  ft_realloc_cat.c  ft_typing.c  (+12 more)
includes/: allocation.h
libft/: Makefile  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa_base.c  ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memmove.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strequ.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strncpy.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c  libft.h
sources/: free.c  malloc.c  malloc_add.c  realloc.c  show_alloc_mem.c
tests/: test0.c  test1.c  test2.c  test3.c  test3_2.c  test4.c  test5.c
